<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_number"
            android:inputType="numberDecimal"
            android:textColor="?android:attr/textColorPrimary" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_number"
            android:inputType="numberDecimal"
            android:layout_marginTop="12dp"
            android:textColor="?android:attr/textColorPrimary" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/radioAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addition" />

            <RadioButton
                android:id="@+id/radioSubtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtraction" />

            <RadioButton
                android:id="@+id/radioMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplication" />

            <RadioButton
                android:id="@+id/radioDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/textResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_placeholder"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="?android:attr/textColorPrimary" />

    </LinearLayout>

</ScrollView>